service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  type: LoadBalancer
  ports:
  - port: 8000
  selector:
    app: helloworld
