hw-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - default-aks-ingress.southeastasia.cloudapp.azure.com
    secretName: letsencrypt-prod
  rules:
  - host: default-aks-ingress.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8000
        path: /(.*)
     # - backend:
     #     serviceName: ingress-demo
     #     servicePort: 80
     #   path: /hello-world-two(/|$)(.*)
